--- a/part-07/bloglist-frontend/src/main.css
+++ b/part-07/bloglist-frontend/src/main.css
@@ -1,3 +1,10 @@
+.navbar {
+  display: flex;
+  gap: 0.5rem;
+  padding: 0.5rem;
+  background: lightgrey;
+}
+
 .notification {
   background: lightgrey;
   font-size: 20px;
